deployments/aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-builder-api
  labels:
    app: cv-builder-api
spec:
  selector:
    app: cv-builder-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
